Added the links in sponsor images

--- a/index.html
+++ b/index.html
@@ -85,10 +85,21 @@
         <!-- SPONSER -->
         <section class="sponsor section">
             <div class="sponsor_container container grid">
-                <img src="/assets/img/sponsor1.png" alt="" class="sponsor_img">
-                <img src="/assets/img/sponsor2.png" alt="" class="sponsor_img">
-                <img src="/assets/img/sponsor3.png" alt="" class="sponsor_img">
-                <img src="/assets/img/sponsor4.png" alt="" class="sponsor_img">
+                <a href="https://music.apple.com/us/browse" target="_blank" class="sponsor_logo">
+                    <img src="/assets/img/sponsor1.png" alt="" class="sponsor_img">
+                </a>
+                
+                <a href="https://open.spotify.com/playlist/5ERgTjJ0SE9zbgISpgtmkc" target="_blank" class="sponsor_logo">
+                    <img src="/assets/img/sponsor2.png" alt="" class="sponsor_img">
+                </a>
+
+                <a href="https://music.amazon.in/artists/B0052GVZ6U/login" target="_blank" class="sponsor_logo">
+                    <img src="/assets/img/sponsor3.png" alt="" class="sponsor_img">
+                </a>
+                
+                <a href="https://music.youtube.com/playlist?list=PLotcQFmhA0QSRdq2BX3YrIYLSEeKz6ddP" target="_blank" class="sponsor_logo">
+                    <img src="/assets/img/sponsor4.png" alt="" class="sponsor_img">
+                </a> 
             </div>
         </section>
 
