Added scroll animations and media queries

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div class="nav_menu" id="nav-menu">
                 <ul class="nav_list">
                     <li class="nav_item">
-                        <a href="#home" class="nav_link">Home</a>
+                        <a href="#home" class="nav_link active-link">Home</a>
                     </li>
                     <li class="nav_item">
                         <a href="#specs" class="nav_link">Specs</a>
@@ -342,7 +342,7 @@
     </a>
 
     <!-- SCROLL REVEAL -->
-    
+    <script src="/assets/js/scrollreveal.min.js"></script>
 
     <!-- MAIN JS -->
     <script src="/assets/js/main.js"></script>
